--- a/Tweeter/Base.lproj/Main.storyboard
+++ b/Tweeter/Base.lproj/Main.storyboard
@@ -125,6 +125,9 @@
                                                     <state key="normal" title="Button">
                                                         <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="onRetweetButton:" destination="iXA-km-eXN" eventType="touchUpInside" id="NLH-2n-Gll"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCe-au-vph">
                                                     <rect key="frame" x="190" y="107" width="32" height="32"/>
@@ -135,6 +138,9 @@
                                                     <state key="normal" title="Button">
                                                         <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="onLikeButton:" destination="iXA-km-eXN" eventType="touchUpInside" id="cUs-OF-MgH"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
